Demo's for Bedcon 2012

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- The line below will make the charts go a lot faster! -->
         <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
         
-        <script type="text/javascript" src="apf_debug.js"></script>
+        <script type="text/javascript" src="apf_release.js"></script>
         <style>
             body {
                 font-family: Arial, Helvetica, sans-serif, Tahoma, Verdana;
