--- a/helloworld.html
+++ b/helloworld.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:a="http://ajax.org/2005/aml" xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <script src="apf_debug.js"></script>
+        <script src="apf_release.js"></script>
     </head>
-    <body style="display:none">
+    <body style="">
         <a:skin 
           src        = "skins/platform/skins.xml"
           media-path = "skins/platform/images/" />
